--- a/p8105_hw5_sns2189.md
+++ b/p8105_hw5_sns2189.md
@@ -1,7 +1,7 @@
 Homework 5
 ================
 Safiya Sirota
-2021-10-20
+2021-11-20
 
 -   [Problem 1](#problem-1)
 -   [Problem 2](#problem-2)
@@ -153,35 +153,277 @@ results_df %>%
 
 ## Problem 2
 
+Start with a dataframe containing all file names; the list.files
+function will help
+
+Iterate over file names and read in data for each subject using
+purrr::map and saving the result as a new variable in the dataframe
+
+Tidy the result; manipulate file names to include control arm and
+subject ID, make sure weekly observations are “tidy”, and do any other
+tidying that’s necessary
+
 ``` r
-tibble(
-  files = list.files("./data/zip_data")
-)
+#list of filenames
+files_df <-
+  tibble(
+    file = list.files("./data/zip_data")
+  )
+
+#making function
+read_file <-
+  function(filename) {
+    
+    subject_df <-
+      read_csv(str_c("./data/zip_data/", filename))
+    
+    return(subject_df)
+  }
+
+#reading in data
+experiment_df <- 
+  files_df %>% 
+    mutate(
+      subj_data = map(file, read_file)
+    )
 ```
 
-    ## # A tibble: 20 x 1
-    ##    files     
-    ##    <chr>     
-    ##  1 con_01.csv
-    ##  2 con_02.csv
-    ##  3 con_03.csv
-    ##  4 con_04.csv
-    ##  5 con_05.csv
-    ##  6 con_06.csv
-    ##  7 con_07.csv
-    ##  8 con_08.csv
-    ##  9 con_09.csv
-    ## 10 con_10.csv
-    ## 11 exp_01.csv
-    ## 12 exp_02.csv
-    ## 13 exp_03.csv
-    ## 14 exp_04.csv
-    ## 15 exp_05.csv
-    ## 16 exp_06.csv
-    ## 17 exp_07.csv
-    ## 18 exp_08.csv
-    ## 19 exp_09.csv
-    ## 20 exp_10.csv
+    ## Rows: 1 Columns: 8
+
+    ## -- Column specification --------------------------------------------------------
+    ## Delimiter: ","
+    ## dbl (8): week_1, week_2, week_3, week_4, week_5, week_6, week_7, week_8
+
+    ## 
+    ## i Use `spec()` to retrieve the full column specification for this data.
+    ## i Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+    ## Rows: 1 Columns: 8
+
+    ## -- Column specification --------------------------------------------------------
+    ## Delimiter: ","
+    ## dbl (8): week_1, week_2, week_3, week_4, week_5, week_6, week_7, week_8
+
+    ## 
+    ## i Use `spec()` to retrieve the full column specification for this data.
+    ## i Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+    ## Rows: 1 Columns: 8
+
+    ## -- Column specification --------------------------------------------------------
+    ## Delimiter: ","
+    ## dbl (8): week_1, week_2, week_3, week_4, week_5, week_6, week_7, week_8
+
+    ## 
+    ## i Use `spec()` to retrieve the full column specification for this data.
+    ## i Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+    ## Rows: 1 Columns: 8
+
+    ## -- Column specification --------------------------------------------------------
+    ## Delimiter: ","
+    ## dbl (8): week_1, week_2, week_3, week_4, week_5, week_6, week_7, week_8
+
+    ## 
+    ## i Use `spec()` to retrieve the full column specification for this data.
+    ## i Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+    ## Rows: 1 Columns: 8
+
+    ## -- Column specification --------------------------------------------------------
+    ## Delimiter: ","
+    ## dbl (8): week_1, week_2, week_3, week_4, week_5, week_6, week_7, week_8
+
+    ## 
+    ## i Use `spec()` to retrieve the full column specification for this data.
+    ## i Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+    ## Rows: 1 Columns: 8
+
+    ## -- Column specification --------------------------------------------------------
+    ## Delimiter: ","
+    ## dbl (8): week_1, week_2, week_3, week_4, week_5, week_6, week_7, week_8
+
+    ## 
+    ## i Use `spec()` to retrieve the full column specification for this data.
+    ## i Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+    ## Rows: 1 Columns: 8
+
+    ## -- Column specification --------------------------------------------------------
+    ## Delimiter: ","
+    ## dbl (8): week_1, week_2, week_3, week_4, week_5, week_6, week_7, week_8
+
+    ## 
+    ## i Use `spec()` to retrieve the full column specification for this data.
+    ## i Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+    ## Rows: 1 Columns: 8
+
+    ## -- Column specification --------------------------------------------------------
+    ## Delimiter: ","
+    ## dbl (8): week_1, week_2, week_3, week_4, week_5, week_6, week_7, week_8
+
+    ## 
+    ## i Use `spec()` to retrieve the full column specification for this data.
+    ## i Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+    ## Rows: 1 Columns: 8
+
+    ## -- Column specification --------------------------------------------------------
+    ## Delimiter: ","
+    ## dbl (8): week_1, week_2, week_3, week_4, week_5, week_6, week_7, week_8
+
+    ## 
+    ## i Use `spec()` to retrieve the full column specification for this data.
+    ## i Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+    ## Rows: 1 Columns: 8
+
+    ## -- Column specification --------------------------------------------------------
+    ## Delimiter: ","
+    ## dbl (8): week_1, week_2, week_3, week_4, week_5, week_6, week_7, week_8
+
+    ## 
+    ## i Use `spec()` to retrieve the full column specification for this data.
+    ## i Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+    ## Rows: 1 Columns: 8
+
+    ## -- Column specification --------------------------------------------------------
+    ## Delimiter: ","
+    ## dbl (8): week_1, week_2, week_3, week_4, week_5, week_6, week_7, week_8
+
+    ## 
+    ## i Use `spec()` to retrieve the full column specification for this data.
+    ## i Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+    ## Rows: 1 Columns: 8
+
+    ## -- Column specification --------------------------------------------------------
+    ## Delimiter: ","
+    ## dbl (8): week_1, week_2, week_3, week_4, week_5, week_6, week_7, week_8
+
+    ## 
+    ## i Use `spec()` to retrieve the full column specification for this data.
+    ## i Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+    ## Rows: 1 Columns: 8
+
+    ## -- Column specification --------------------------------------------------------
+    ## Delimiter: ","
+    ## dbl (8): week_1, week_2, week_3, week_4, week_5, week_6, week_7, week_8
+
+    ## 
+    ## i Use `spec()` to retrieve the full column specification for this data.
+    ## i Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+    ## Rows: 1 Columns: 8
+
+    ## -- Column specification --------------------------------------------------------
+    ## Delimiter: ","
+    ## dbl (8): week_1, week_2, week_3, week_4, week_5, week_6, week_7, week_8
+
+    ## 
+    ## i Use `spec()` to retrieve the full column specification for this data.
+    ## i Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+    ## Rows: 1 Columns: 8
+
+    ## -- Column specification --------------------------------------------------------
+    ## Delimiter: ","
+    ## dbl (8): week_1, week_2, week_3, week_4, week_5, week_6, week_7, week_8
+
+    ## 
+    ## i Use `spec()` to retrieve the full column specification for this data.
+    ## i Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+    ## Rows: 1 Columns: 8
+
+    ## -- Column specification --------------------------------------------------------
+    ## Delimiter: ","
+    ## dbl (8): week_1, week_2, week_3, week_4, week_5, week_6, week_7, week_8
+
+    ## 
+    ## i Use `spec()` to retrieve the full column specification for this data.
+    ## i Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+    ## Rows: 1 Columns: 8
+
+    ## -- Column specification --------------------------------------------------------
+    ## Delimiter: ","
+    ## dbl (8): week_1, week_2, week_3, week_4, week_5, week_6, week_7, week_8
+
+    ## 
+    ## i Use `spec()` to retrieve the full column specification for this data.
+    ## i Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+    ## Rows: 1 Columns: 8
+
+    ## -- Column specification --------------------------------------------------------
+    ## Delimiter: ","
+    ## dbl (8): week_1, week_2, week_3, week_4, week_5, week_6, week_7, week_8
+
+    ## 
+    ## i Use `spec()` to retrieve the full column specification for this data.
+    ## i Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+    ## Rows: 1 Columns: 8
+
+    ## -- Column specification --------------------------------------------------------
+    ## Delimiter: ","
+    ## dbl (8): week_1, week_2, week_3, week_4, week_5, week_6, week_7, week_8
+
+    ## 
+    ## i Use `spec()` to retrieve the full column specification for this data.
+    ## i Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+    ## Rows: 1 Columns: 8
+
+    ## -- Column specification --------------------------------------------------------
+    ## Delimiter: ","
+    ## dbl (8): week_1, week_2, week_3, week_4, week_5, week_6, week_7, week_8
+
+    ## 
+    ## i Use `spec()` to retrieve the full column specification for this data.
+    ## i Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+``` r
+#tidying data
+experiment_df <-
+  experiment_df %>% 
+  unnest(subj_data) %>% 
+  mutate(
+    arm = as.factor(
+      case_when(
+      str_starts(file, "con") ~ "control",
+      TRUE ~ "experimental"
+      )
+    ),
+    subject_n = case_when(
+      arm == "control" ~ as.numeric((str_sub(file, 5, 6))),
+      TRUE ~ as.numeric((str_sub(file, 5, 6))) + 10
+    )
+  ) %>% 
+  select(-file) %>% 
+  relocate(subject_n, arm) %>% 
+  pivot_longer(
+    week_1:week_8,
+    names_to = "week",
+    values_to = "value",
+    names_prefix = "week_"
+  )
+```
+
+**Making spaghetti plot**
+
+``` r
+experiment_df %>% 
+  ggplot(aes(x = week, y = value, group = as.factor(subject_n), color = arm)) +
+  geom_line()
+```
+
+<img src="p8105_hw5_sns2189_files/figure-gfm/unnamed-chunk-8-1.png" width="90%" />
 
 ## Problem 3
 
