--- a/p8105_hw5_sns2189.Rmd
+++ b/p8105_hw5_sns2189.Rmd
@@ -9,8 +9,6 @@ output:
 
 ```{r, echo = FALSE, message = FALSE}
 library(tidyverse)
-library(patchwork)
-library(p8105.datasets)
 
 knitr::opts_chunk$set(
   fig.width = 6,
@@ -73,9 +71,7 @@ baltimore_test %>%
 
 ```
 
-Let's try to iterate across cities!
-
-First off, write a function.
+__Writing a function to apply to any city__
 
 ```{r}
 prop_test_function <- function(city_df) {
@@ -104,7 +100,7 @@ homicide_df %>%
   prop_test_function()
 ```
 
-Now, let's iterate across all cities.
+__Iterating across all cities__
 
 ```{r}
 results_df <-
@@ -119,8 +115,7 @@ results_df <-
   select(city_state, estimate, starts_with("conf"))
 ```
 
-
-Try to make a plot showing estimates and confidence intervals.
+__Plotting estimates and confidence intervals__
 
 ```{r}
 results_df %>% 
@@ -133,20 +128,18 @@ results_df %>%
 
 ## Problem 2
 
-Start with a dataframe containing all file names; the list.files function will help
-
-Iterate over file names and read in data for each subject using purrr::map and saving the result as a new variable in the dataframe
-
-Tidy the result; manipulate file names to include control arm and subject ID, make sure weekly observations are “tidy”, and do any other tidying that’s necessary
+__Making a dataframe containing all file names__ 
 
 ```{r}
-#list of filenames
 files_df <-
   tibble(
     file = list.files("./data/zip_data")
   )
+```
 
-#making function
+__Writing function to read each file's data__
+
+```{r}
 read_file <-
   function(filename) {
     
@@ -155,15 +148,23 @@ read_file <-
     
     return(subject_df)
   }
+```
 
-#reading in data
+__Iterating through filenames and saving data as a variable__
+
+```{r, message = FALSE}
 experiment_df <- 
   files_df %>% 
     mutate(
       subj_data = map(file, read_file)
     )
+```
 
-#tidying data
+__Unnesting and tidying data__
+
+In this process, I added 10 to each subject number in the experimental arm. I did this to differentiate between participants, because subject 1 in the control arm is not the same person as subject 1 in the experimental arm.
+
+```{r}
 experiment_df <-
   experiment_df %>% 
   unnest(subj_data) %>% 
@@ -197,16 +198,38 @@ experiment_df %>%
   geom_line()
 ```
 
+It seems that for both the experimental and control arms, subjects' values tend to fluctuate up and down throughout the weeks. However, for the majority of subjects in the experimental arm, their values are much higher at week 8 than they were at week 1. The subjects in the control arm seem to generally have similar values at week 8 when compared to week 1. In the first 2 weeks, the experimental arm and the control arm have similar values, but as the weeks go on, we see the experimental arm having higher values on average when compared to the control arm.
 
 ## Problem 3
+
+__Introducing NAs into `iris`__
 
 ```{r}
 set.seed(10)
 
-iris_with_missing <-
-  iris %>% 
-  map_df(~replace(.x, sample(1:150, 20), NA)) %>% 
+iris_with_missing = iris %>% 
+  map_df(~replace(.x, sample(1:150, 20), NA)) %>%
   mutate(Species = as.character(Species))
   
 ```
 
+__Creating a function to fill missing values__
+
+```{r}
+fill_na <-
+  function(x) {
+    if (is.numeric(x)) {
+      avg <- mean(x, na.rm = TRUE);
+      replace_na(x, avg)
+    }
+    else if (is.character(x)) {
+      replace_na(x, "virginica")
+    }
+  }
+```
+
+__Applying function to `iris_with_missing`__
+
+```{r}
+map(iris_with_missing, fill_na)
+```
