--- a/p8105_hw5_sns2189.md
+++ b/p8105_hw5_sns2189.md
@@ -66,9 +66,7 @@ baltimore_test %>%
     ##      <dbl>     <dbl>    <dbl>     <int>    <dbl>     <dbl> <chr>     <chr>      
     ## 1    0.646      239. 6.46e-54         1    0.628     0.663 1-sample~ two.sided
 
-Let’s try to iterate across cities!
-
-First off, write a function.
+**Writing a function to apply to any city**
 
 ``` r
 prop_test_function <- function(city_df) {
@@ -123,7 +121,7 @@ homicide_df %>%
     ##         p 
     ## 0.3862434
 
-Now, let’s iterate across all cities.
+**Iterating across all cities**
 
 ``` r
 results_df <-
@@ -138,7 +136,7 @@ results_df <-
   select(city_state, estimate, starts_with("conf"))
 ```
 
-Try to make a plot showing estimates and confidence intervals.
+**Plotting estimates and confidence intervals**
 
 ``` r
 results_df %>% 
@@ -153,24 +151,18 @@ results_df %>%
 
 ## Problem 2
 
-Start with a dataframe containing all file names; the list.files
-function will help
-
-Iterate over file names and read in data for each subject using
-purrr::map and saving the result as a new variable in the dataframe
-
-Tidy the result; manipulate file names to include control arm and
-subject ID, make sure weekly observations are “tidy”, and do any other
-tidying that’s necessary
+**Making a dataframe containing all file names**
 
 ``` r
-#list of filenames
 files_df <-
   tibble(
     file = list.files("./data/zip_data")
   )
+```
 
-#making function
+**Writing function to read each file’s data**
+
+``` r
 read_file <-
   function(filename) {
     
@@ -179,8 +171,11 @@ read_file <-
     
     return(subject_df)
   }
+```
 
-#reading in data
+**Iterating through filenames and saving data as a variable**
+
+``` r
 experiment_df <- 
   files_df %>% 
     mutate(
@@ -188,208 +183,14 @@ experiment_df <-
     )
 ```
 
-    ## Rows: 1 Columns: 8
+**Unnesting and tidying data**
 
-    ## -- Column specification --------------------------------------------------------
-    ## Delimiter: ","
-    ## dbl (8): week_1, week_2, week_3, week_4, week_5, week_6, week_7, week_8
-
-    ## 
-    ## i Use `spec()` to retrieve the full column specification for this data.
-    ## i Specify the column types or set `show_col_types = FALSE` to quiet this message.
-
-    ## Rows: 1 Columns: 8
-
-    ## -- Column specification --------------------------------------------------------
-    ## Delimiter: ","
-    ## dbl (8): week_1, week_2, week_3, week_4, week_5, week_6, week_7, week_8
-
-    ## 
-    ## i Use `spec()` to retrieve the full column specification for this data.
-    ## i Specify the column types or set `show_col_types = FALSE` to quiet this message.
-
-    ## Rows: 1 Columns: 8
-
-    ## -- Column specification --------------------------------------------------------
-    ## Delimiter: ","
-    ## dbl (8): week_1, week_2, week_3, week_4, week_5, week_6, week_7, week_8
-
-    ## 
-    ## i Use `spec()` to retrieve the full column specification for this data.
-    ## i Specify the column types or set `show_col_types = FALSE` to quiet this message.
-
-    ## Rows: 1 Columns: 8
-
-    ## -- Column specification --------------------------------------------------------
-    ## Delimiter: ","
-    ## dbl (8): week_1, week_2, week_3, week_4, week_5, week_6, week_7, week_8
-
-    ## 
-    ## i Use `spec()` to retrieve the full column specification for this data.
-    ## i Specify the column types or set `show_col_types = FALSE` to quiet this message.
-
-    ## Rows: 1 Columns: 8
-
-    ## -- Column specification --------------------------------------------------------
-    ## Delimiter: ","
-    ## dbl (8): week_1, week_2, week_3, week_4, week_5, week_6, week_7, week_8
-
-    ## 
-    ## i Use `spec()` to retrieve the full column specification for this data.
-    ## i Specify the column types or set `show_col_types = FALSE` to quiet this message.
-
-    ## Rows: 1 Columns: 8
-
-    ## -- Column specification --------------------------------------------------------
-    ## Delimiter: ","
-    ## dbl (8): week_1, week_2, week_3, week_4, week_5, week_6, week_7, week_8
-
-    ## 
-    ## i Use `spec()` to retrieve the full column specification for this data.
-    ## i Specify the column types or set `show_col_types = FALSE` to quiet this message.
-
-    ## Rows: 1 Columns: 8
-
-    ## -- Column specification --------------------------------------------------------
-    ## Delimiter: ","
-    ## dbl (8): week_1, week_2, week_3, week_4, week_5, week_6, week_7, week_8
-
-    ## 
-    ## i Use `spec()` to retrieve the full column specification for this data.
-    ## i Specify the column types or set `show_col_types = FALSE` to quiet this message.
-
-    ## Rows: 1 Columns: 8
-
-    ## -- Column specification --------------------------------------------------------
-    ## Delimiter: ","
-    ## dbl (8): week_1, week_2, week_3, week_4, week_5, week_6, week_7, week_8
-
-    ## 
-    ## i Use `spec()` to retrieve the full column specification for this data.
-    ## i Specify the column types or set `show_col_types = FALSE` to quiet this message.
-
-    ## Rows: 1 Columns: 8
-
-    ## -- Column specification --------------------------------------------------------
-    ## Delimiter: ","
-    ## dbl (8): week_1, week_2, week_3, week_4, week_5, week_6, week_7, week_8
-
-    ## 
-    ## i Use `spec()` to retrieve the full column specification for this data.
-    ## i Specify the column types or set `show_col_types = FALSE` to quiet this message.
-
-    ## Rows: 1 Columns: 8
-
-    ## -- Column specification --------------------------------------------------------
-    ## Delimiter: ","
-    ## dbl (8): week_1, week_2, week_3, week_4, week_5, week_6, week_7, week_8
-
-    ## 
-    ## i Use `spec()` to retrieve the full column specification for this data.
-    ## i Specify the column types or set `show_col_types = FALSE` to quiet this message.
-
-    ## Rows: 1 Columns: 8
-
-    ## -- Column specification --------------------------------------------------------
-    ## Delimiter: ","
-    ## dbl (8): week_1, week_2, week_3, week_4, week_5, week_6, week_7, week_8
-
-    ## 
-    ## i Use `spec()` to retrieve the full column specification for this data.
-    ## i Specify the column types or set `show_col_types = FALSE` to quiet this message.
-
-    ## Rows: 1 Columns: 8
-
-    ## -- Column specification --------------------------------------------------------
-    ## Delimiter: ","
-    ## dbl (8): week_1, week_2, week_3, week_4, week_5, week_6, week_7, week_8
-
-    ## 
-    ## i Use `spec()` to retrieve the full column specification for this data.
-    ## i Specify the column types or set `show_col_types = FALSE` to quiet this message.
-
-    ## Rows: 1 Columns: 8
-
-    ## -- Column specification --------------------------------------------------------
-    ## Delimiter: ","
-    ## dbl (8): week_1, week_2, week_3, week_4, week_5, week_6, week_7, week_8
-
-    ## 
-    ## i Use `spec()` to retrieve the full column specification for this data.
-    ## i Specify the column types or set `show_col_types = FALSE` to quiet this message.
-
-    ## Rows: 1 Columns: 8
-
-    ## -- Column specification --------------------------------------------------------
-    ## Delimiter: ","
-    ## dbl (8): week_1, week_2, week_3, week_4, week_5, week_6, week_7, week_8
-
-    ## 
-    ## i Use `spec()` to retrieve the full column specification for this data.
-    ## i Specify the column types or set `show_col_types = FALSE` to quiet this message.
-
-    ## Rows: 1 Columns: 8
-
-    ## -- Column specification --------------------------------------------------------
-    ## Delimiter: ","
-    ## dbl (8): week_1, week_2, week_3, week_4, week_5, week_6, week_7, week_8
-
-    ## 
-    ## i Use `spec()` to retrieve the full column specification for this data.
-    ## i Specify the column types or set `show_col_types = FALSE` to quiet this message.
-
-    ## Rows: 1 Columns: 8
-
-    ## -- Column specification --------------------------------------------------------
-    ## Delimiter: ","
-    ## dbl (8): week_1, week_2, week_3, week_4, week_5, week_6, week_7, week_8
-
-    ## 
-    ## i Use `spec()` to retrieve the full column specification for this data.
-    ## i Specify the column types or set `show_col_types = FALSE` to quiet this message.
-
-    ## Rows: 1 Columns: 8
-
-    ## -- Column specification --------------------------------------------------------
-    ## Delimiter: ","
-    ## dbl (8): week_1, week_2, week_3, week_4, week_5, week_6, week_7, week_8
-
-    ## 
-    ## i Use `spec()` to retrieve the full column specification for this data.
-    ## i Specify the column types or set `show_col_types = FALSE` to quiet this message.
-
-    ## Rows: 1 Columns: 8
-
-    ## -- Column specification --------------------------------------------------------
-    ## Delimiter: ","
-    ## dbl (8): week_1, week_2, week_3, week_4, week_5, week_6, week_7, week_8
-
-    ## 
-    ## i Use `spec()` to retrieve the full column specification for this data.
-    ## i Specify the column types or set `show_col_types = FALSE` to quiet this message.
-
-    ## Rows: 1 Columns: 8
-
-    ## -- Column specification --------------------------------------------------------
-    ## Delimiter: ","
-    ## dbl (8): week_1, week_2, week_3, week_4, week_5, week_6, week_7, week_8
-
-    ## 
-    ## i Use `spec()` to retrieve the full column specification for this data.
-    ## i Specify the column types or set `show_col_types = FALSE` to quiet this message.
-
-    ## Rows: 1 Columns: 8
-
-    ## -- Column specification --------------------------------------------------------
-    ## Delimiter: ","
-    ## dbl (8): week_1, week_2, week_3, week_4, week_5, week_6, week_7, week_8
-
-    ## 
-    ## i Use `spec()` to retrieve the full column specification for this data.
-    ## i Specify the column types or set `show_col_types = FALSE` to quiet this message.
+In this process, I added 10 to each subject number in the experimental
+arm. I did this to differentiate between participants, because subject 1
+in the control arm is not the same person as subject 1 in the
+experimental arm.
 
 ``` r
-#tidying data
 experiment_df <-
   experiment_df %>% 
   unnest(subj_data) %>% 
@@ -423,15 +224,162 @@ experiment_df %>%
   geom_line()
 ```
 
-<img src="p8105_hw5_sns2189_files/figure-gfm/unnamed-chunk-8-1.png" width="90%" />
+<img src="p8105_hw5_sns2189_files/figure-gfm/unnamed-chunk-11-1.png" width="90%" />
+
+It seems that for both the experimental and control arms, subjects’
+values tend to fluctuate up and down throughout the weeks. However, for
+the majority of subjects in the experimental arm, their values are much
+higher at week 8 than they were at week 1. The subjects in the control
+arm seem to generally have similar values at week 8 when compared to
+week 1. In the first 2 weeks, the experimental arm and the control arm
+have similar values, but as the weeks go on, we see the experimental arm
+having higher values on average when compared to the control arm.
 
 ## Problem 3
+
+**Introducing NAs into `iris`**
 
 ``` r
 set.seed(10)
 
-iris_with_missing <-
-  iris %>% 
-  map_df(~replace(.x, sample(1:150, 20), NA)) %>% 
+iris_with_missing = iris %>% 
+  map_df(~replace(.x, sample(1:150, 20), NA)) %>%
   mutate(Species = as.character(Species))
 ```
+
+**Creating a function to fill missing values**
+
+``` r
+fill_na <-
+  function(x) {
+    if (is.numeric(x)) {
+      avg <- mean(x, na.rm = TRUE);
+      replace_na(x, avg)
+    }
+    else if (is.character(x)) {
+      replace_na(x, "virginica")
+    }
+  }
+```
+
+**Applying function to `iris_with_missing`**
+
+``` r
+map(iris_with_missing, fill_na)
+```
+
+    ## $Sepal.Length
+    ##   [1] 5.100000 4.900000 4.700000 4.600000 5.000000 5.400000 5.819231 5.000000
+    ##   [9] 4.400000 4.900000 5.400000 4.800000 5.819231 4.300000 5.819231 5.700000
+    ##  [17] 5.400000 5.100000 5.700000 5.100000 5.400000 5.100000 4.600000 5.819231
+    ##  [25] 4.800000 5.000000 5.000000 5.200000 5.819231 4.700000 4.800000 5.400000
+    ##  [33] 5.200000 5.500000 4.900000 5.000000 5.500000 4.900000 4.400000 5.100000
+    ##  [41] 5.000000 4.500000 4.400000 5.000000 5.100000 4.800000 5.100000 4.600000
+    ##  [49] 5.300000 5.000000 7.000000 6.400000 6.900000 5.500000 6.500000 5.700000
+    ##  [57] 6.300000 4.900000 6.600000 5.200000 5.000000 5.900000 6.000000 6.100000
+    ##  [65] 5.600000 6.700000 5.600000 5.800000 6.200000 5.600000 5.900000 5.819231
+    ##  [73] 6.300000 5.819231 6.400000 6.600000 6.800000 6.700000 6.000000 5.700000
+    ##  [81] 5.500000 5.819231 5.800000 6.000000 5.400000 5.819231 6.700000 5.819231
+    ##  [89] 5.600000 5.500000 5.500000 5.819231 5.800000 5.000000 5.819231 5.700000
+    ##  [97] 5.700000 6.200000 5.100000 5.700000 6.300000 5.800000 7.100000 6.300000
+    ## [105] 6.500000 7.600000 4.900000 7.300000 6.700000 5.819231 6.500000 5.819231
+    ## [113] 6.800000 5.700000 5.800000 6.400000 6.500000 7.700000 7.700000 6.000000
+    ## [121] 5.819231 5.600000 7.700000 6.300000 6.700000 7.200000 6.200000 6.100000
+    ## [129] 6.400000 7.200000 7.400000 7.900000 6.400000 5.819231 6.100000 5.819231
+    ## [137] 5.819231 6.400000 6.000000 6.900000 6.700000 6.900000 5.819231 6.800000
+    ## [145] 6.700000 6.700000 6.300000 6.500000 5.819231 5.900000
+    ## 
+    ## $Sepal.Width
+    ##   [1] 3.500000 3.000000 3.200000 3.100000 3.600000 3.900000 3.400000 3.400000
+    ##   [9] 2.900000 3.100000 3.075385 3.400000 3.075385 3.000000 4.000000 4.400000
+    ##  [17] 3.900000 3.500000 3.800000 3.800000 3.400000 3.700000 3.600000 3.300000
+    ##  [25] 3.400000 3.000000 3.400000 3.500000 3.400000 3.200000 3.100000 3.075385
+    ##  [33] 3.075385 4.200000 3.100000 3.200000 3.500000 3.600000 3.000000 3.400000
+    ##  [41] 3.500000 3.075385 3.200000 3.500000 3.800000 3.000000 3.800000 3.200000
+    ##  [49] 3.700000 3.075385 3.075385 3.200000 3.100000 2.300000 2.800000 2.800000
+    ##  [57] 3.300000 2.400000 2.900000 2.700000 2.000000 3.000000 2.200000 2.900000
+    ##  [65] 2.900000 3.100000 3.000000 3.075385 2.200000 2.500000 3.200000 2.800000
+    ##  [73] 2.500000 2.800000 2.900000 3.000000 2.800000 3.075385 3.075385 2.600000
+    ##  [81] 2.400000 2.400000 2.700000 2.700000 3.000000 3.400000 3.100000 3.075385
+    ##  [89] 3.000000 2.500000 3.075385 3.075385 3.075385 2.300000 2.700000 3.000000
+    ##  [97] 2.900000 2.900000 2.500000 2.800000 3.075385 2.700000 3.000000 2.900000
+    ## [105] 3.075385 3.000000 2.500000 2.900000 3.075385 3.600000 3.200000 2.700000
+    ## [113] 3.000000 3.075385 2.800000 3.200000 3.000000 3.800000 2.600000 2.200000
+    ## [121] 3.200000 3.075385 2.800000 2.700000 3.300000 3.200000 2.800000 3.000000
+    ## [129] 2.800000 3.000000 2.800000 3.800000 2.800000 2.800000 3.075385 3.000000
+    ## [137] 3.400000 3.100000 3.000000 3.100000 3.100000 3.100000 2.700000 3.200000
+    ## [145] 3.300000 3.000000 2.500000 3.000000 3.400000 3.000000
+    ## 
+    ## $Petal.Length
+    ##   [1] 1.400000 1.400000 1.300000 1.500000 1.400000 1.700000 1.400000 1.500000
+    ##   [9] 1.400000 3.765385 1.500000 1.600000 1.400000 3.765385 3.765385 1.500000
+    ##  [17] 1.300000 1.400000 1.700000 1.500000 1.700000 1.500000 1.000000 3.765385
+    ##  [25] 1.900000 3.765385 1.600000 1.500000 1.400000 1.600000 3.765385 1.500000
+    ##  [33] 1.500000 1.400000 3.765385 1.200000 1.300000 1.400000 1.300000 1.500000
+    ##  [41] 1.300000 1.300000 1.300000 1.600000 1.900000 1.400000 1.600000 3.765385
+    ##  [49] 1.500000 1.400000 4.700000 4.500000 4.900000 4.000000 4.600000 4.500000
+    ##  [57] 4.700000 3.765385 4.600000 3.900000 3.765385 4.200000 4.000000 4.700000
+    ##  [65] 3.600000 4.400000 4.500000 4.100000 4.500000 3.900000 4.800000 4.000000
+    ##  [73] 4.900000 3.765385 4.300000 4.400000 4.800000 5.000000 4.500000 3.500000
+    ##  [81] 3.800000 3.700000 3.900000 5.100000 4.500000 4.500000 4.700000 4.400000
+    ##  [89] 3.765385 4.000000 4.400000 4.600000 4.000000 3.300000 4.200000 4.200000
+    ##  [97] 4.200000 4.300000 3.000000 4.100000 3.765385 5.100000 5.900000 5.600000
+    ## [105] 5.800000 6.600000 4.500000 6.300000 3.765385 3.765385 5.100000 5.300000
+    ## [113] 5.500000 5.000000 5.100000 5.300000 3.765385 6.700000 6.900000 5.000000
+    ## [121] 5.700000 4.900000 6.700000 4.900000 5.700000 6.000000 4.800000 4.900000
+    ## [129] 5.600000 5.800000 6.100000 3.765385 3.765385 5.100000 5.600000 6.100000
+    ## [137] 5.600000 5.500000 4.800000 5.400000 5.600000 5.100000 5.100000 3.765385
+    ## [145] 3.765385 5.200000 5.000000 5.200000 5.400000 5.100000
+    ## 
+    ## $Petal.Width
+    ##   [1] 0.200000 0.200000 0.200000 1.192308 0.200000 0.400000 0.300000 0.200000
+    ##   [9] 0.200000 0.100000 0.200000 0.200000 0.100000 0.100000 0.200000 0.400000
+    ##  [17] 0.400000 1.192308 0.300000 1.192308 0.200000 0.400000 0.200000 0.500000
+    ##  [25] 0.200000 0.200000 0.400000 0.200000 0.200000 0.200000 0.200000 0.400000
+    ##  [33] 0.100000 0.200000 0.200000 0.200000 0.200000 0.100000 1.192308 0.200000
+    ##  [41] 0.300000 1.192308 0.200000 0.600000 0.400000 0.300000 0.200000 0.200000
+    ##  [49] 0.200000 0.200000 1.400000 1.500000 1.500000 1.300000 1.500000 1.300000
+    ##  [57] 1.600000 1.000000 1.300000 1.400000 1.000000 1.500000 1.192308 1.400000
+    ##  [65] 1.300000 1.400000 1.500000 1.000000 1.500000 1.100000 1.800000 1.300000
+    ##  [73] 1.500000 1.200000 1.300000 1.400000 1.400000 1.192308 1.192308 1.000000
+    ##  [81] 1.100000 1.000000 1.200000 1.600000 1.500000 1.600000 1.192308 1.300000
+    ##  [89] 1.192308 1.192308 1.200000 1.192308 1.192308 1.192308 1.300000 1.200000
+    ##  [97] 1.300000 1.300000 1.192308 1.300000 2.500000 1.900000 2.100000 1.800000
+    ## [105] 2.200000 2.100000 1.700000 1.800000 1.800000 2.500000 2.000000 1.900000
+    ## [113] 2.100000 2.000000 2.400000 2.300000 1.800000 1.192308 2.300000 1.500000
+    ## [121] 1.192308 2.000000 2.000000 1.800000 2.100000 1.800000 1.800000 1.800000
+    ## [129] 2.100000 1.600000 1.192308 2.000000 2.200000 1.500000 1.400000 2.300000
+    ## [137] 1.192308 1.192308 1.800000 2.100000 2.400000 2.300000 1.900000 2.300000
+    ## [145] 2.500000 2.300000 1.900000 2.000000 2.300000 1.800000
+    ## 
+    ## $Species
+    ##   [1] "setosa"     "setosa"     "setosa"     "setosa"     "setosa"    
+    ##   [6] "setosa"     "setosa"     "setosa"     "setosa"     "setosa"    
+    ##  [11] "setosa"     "setosa"     "setosa"     "setosa"     "setosa"    
+    ##  [16] "setosa"     "setosa"     "setosa"     "setosa"     "setosa"    
+    ##  [21] "setosa"     "virginica"  "setosa"     "setosa"     "virginica" 
+    ##  [26] "setosa"     "virginica"  "setosa"     "setosa"     "setosa"    
+    ##  [31] "setosa"     "setosa"     "setosa"     "setosa"     "setosa"    
+    ##  [36] "setosa"     "setosa"     "setosa"     "setosa"     "setosa"    
+    ##  [41] "setosa"     "virginica"  "setosa"     "setosa"     "setosa"    
+    ##  [46] "virginica"  "setosa"     "setosa"     "setosa"     "setosa"    
+    ##  [51] "virginica"  "versicolor" "versicolor" "versicolor" "versicolor"
+    ##  [56] "versicolor" "virginica"  "versicolor" "virginica"  "versicolor"
+    ##  [61] "versicolor" "versicolor" "versicolor" "versicolor" "versicolor"
+    ##  [66] "versicolor" "versicolor" "versicolor" "versicolor" "versicolor"
+    ##  [71] "versicolor" "virginica"  "versicolor" "versicolor" "versicolor"
+    ##  [76] "versicolor" "versicolor" "versicolor" "versicolor" "virginica" 
+    ##  [81] "versicolor" "versicolor" "versicolor" "versicolor" "versicolor"
+    ##  [86] "versicolor" "versicolor" "versicolor" "versicolor" "versicolor"
+    ##  [91] "versicolor" "versicolor" "versicolor" "virginica"  "versicolor"
+    ##  [96] "versicolor" "versicolor" "versicolor" "versicolor" "virginica" 
+    ## [101] "virginica"  "virginica"  "virginica"  "virginica"  "virginica" 
+    ## [106] "virginica"  "virginica"  "virginica"  "virginica"  "virginica" 
+    ## [111] "virginica"  "virginica"  "virginica"  "virginica"  "virginica" 
+    ## [116] "virginica"  "virginica"  "virginica"  "virginica"  "virginica" 
+    ## [121] "virginica"  "virginica"  "virginica"  "virginica"  "virginica" 
+    ## [126] "virginica"  "virginica"  "virginica"  "virginica"  "virginica" 
+    ## [131] "virginica"  "virginica"  "virginica"  "virginica"  "virginica" 
+    ## [136] "virginica"  "virginica"  "virginica"  "virginica"  "virginica" 
+    ## [141] "virginica"  "virginica"  "virginica"  "virginica"  "virginica" 
+    ## [146] "virginica"  "virginica"  "virginica"  "virginica"  "virginica"
